# paws-and-preferences

./: .gitignore  Cargo.toml  DEFAULT.md  Dioxus.toml  README.md  next.config.js  package-lock.json  package.json
app/: backend.js  cat-view.js  cat_view.js  layout.js  like-button.js  page.js  summary.js
app/components/: cat_image.js  like_dislike.js
assets/: main.css  tailwind.css
src/: backend.rs  main.rs  routes.rs
src/components/: cat_view.rs  mod.rs  nav.rs  view.rs
