[package]
name = "server_dog"
version = "0.1.0"
authors = ["Yap Jia Hong <yapjiahong-p@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["fullstack", "router"] }
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
